# sphinx-codeautolink

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  TODO.rst  contributing.rst  pyproject.toml  readme.rst  readme_pypi.rst  readthedocs.yml  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md
.github/workflows/: CI.yml  scheduled.yml
docs/: Makefile  requirements.txt
docs/src/: 404.rst  about.rst  api.rst  conf.py  example_library.rst  examples.rst  getting_started.rst  index.rst  lib.py  reference.rst  release_notes.rst  tutorials.rst
docs/src/static/: custom.css
requirements/: dev  dev.txt  docs  docs.txt  extras  tests  tests.txt
src/sphinx_codeautolink/: __init__.py  parse.py  warn.py
src/sphinx_codeautolink/extension/: __init__.py  backref.py  block.py  cache.py  directive.py  resolve.py  translation.py
src/sphinx_codeautolink/locale/: sphinx-codeautolink.pot
src/sphinx_codeautolink/locale/de/LC_MESSAGES/: sphinx-codeautolink.po
src/sphinx_codeautolink/locale/de_DE/LC_MESSAGES/: sphinx-codeautolink.mo  sphinx-codeautolink.po
src/sphinx_codeautolink/locale/es/LC_MESSAGES/: sphinx-codeautolink.po
src/sphinx_codeautolink/locale/es_ES/LC_MESSAGES/: sphinx-codeautolink.mo  sphinx-codeautolink.po
src/sphinx_codeautolink/locale/fi/LC_MESSAGES/: sphinx-codeautolink.po
src/sphinx_codeautolink/locale/fi_FI/LC_MESSAGES/: sphinx-codeautolink.mo  sphinx-codeautolink.po
src/sphinx_codeautolink/locale/fr/LC_MESSAGES/: sphinx-codeautolink.mo  sphinx-codeautolink.po
src/sphinx_codeautolink/locale/it/LC_MESSAGES/: sphinx-codeautolink.mo  sphinx-codeautolink.po
src/sphinx_codeautolink/locale/nl/LC_MESSAGES/: sphinx-codeautolink.mo  sphinx-codeautolink.po
src/sphinx_codeautolink/locale/ru/LC_MESSAGES/: sphinx-codeautolink.po
src/sphinx_codeautolink/locale/uk/LC_MESSAGES/: sphinx-codeautolink.po
src/sphinx_codeautolink/static/: sphinx-codeautolink.css
tests/: __init__.py  parse.py  util.py
tests/extension/: __init__.py  _check.py  class_attr.txt  concat_default.txt  concat_off.txt  concat_on_across_sections.txt  concat_on_breaks.txt  concat_section_breaks.txt  concat_section_returns_to_global.txt  custom_block.txt  default_import.txt  default_import_multiline.txt  default_import_overwritten.txt  empty_project.txt  implicit_concatenated.txt  implicit_consumed_non_python.txt  implicit_multiple.txt  implicit_single.txt  no_module_docs.txt  non_python_block.txt  preface_global_multiline.txt  preface_global_overwritten.txt  preface_multiline_and_arg.txt  preface_multiple.txt  ref_chain.txt  ref_class_attr.txt  ref_class_meth_returns_self.txt  ref_decorator.txt  ref_doctest.txt  ref_fluent_attrs.txt  ref_fluent_call.txt  ref_import_from_complex.txt  ref_import_star.txt  ref_import_submodule.txt  ref_imported_function.txt  ref_optional.txt  ref_pycon.txt  ref_shadow_builtin.txt  ref_simple.txt  ref_star_import.txt  (+7 more)
tests/extension/fail/: concat_invalid.txt  custom_block_import_invalid.txt  custom_block_syntax_error.txt  failed_resolve.txt  failed_resolve_invalid_location.txt  failed_resolve_no_module.txt  match_block_warning.txt  missing_inventory.txt  no_backreference.txt  no_module_docs.txt  preface_invalid_arg.txt  ref_import_star_invalid.txt  ref_invalid_block_type.txt  ref_invalid_syntax.txt  ref_invalid_syntax_complex.txt  ref_ipython_non-python.txt  ref_ipython_syntax.txt  skip_invalid.txt
tests/extension/ref/: autosummary.txt  class_mro_fix.txt  concat_off.txt  concat_on_across_sections.txt  concat_on_breaks.txt  concat_section_returns_to_global.txt  custom_block.txt  custom_block_imported.txt  empty_project.txt  inventory_map_is_needed.txt  inventory_map_not_needed.txt  lexer_Python.txt  lexer_bazel.txt  lexer_default.txt  lexer_default_fail.txt  lexer_doctest.txt  lexer_doctest_empty_input.txt  lexer_extdoctest_doctest.txt  lexer_extdoctest_setup.txt  lexer_extdoctest_setup_wrong.txt  lexer_extdoctest_testcode.txt  lexer_highlight_language.txt  lexer_highlight_none.txt  lexer_ipython3.txt  lexer_ipython_directive.txt  lexer_ipython_syntax.txt  lexer_literal.txt  lexer_non_python_block.txt  lexer_py.txt  lexer_py3.txt  lexer_pycon_implicit.txt  lexer_python3.txt  lexer_starlark.txt  line_numbers.txt  non_python_block.txt  preface_concatenated.txt  preface_consumed_non_python.txt  preface_document.txt  preface_global.txt  preface_multiline.txt  (+46 more)
tests/extension/src/: class_mro_fix.py  future_project.py  parser_func.py  type_checking_project.py
tests/extension/src/test_project/: __init__.py  sub.py
tests/extension/src/type_checking/: __init__.py
tests/extension/src/type_checking_aliased/: __init__.py  foo.py
tests/extension/table/: tab_autodoc_empty.txt  tab_autodoc_links.txt  tab_manual_collapse.txt  tab_manual_empty.txt  tab_manual_links.txt  tab_manual_links_subsection.txt  tab_no_table.txt
tests/parse/: __init__.py  _util.py  assign.py  chain.py  match.py  scope.py
tests/resolve/: __init__.py
